tests/model/real/bad_ordered_root.rsmt2
sat
(
  (define-fun a () Real (root-of-with-order (coeffs 1 0 (- 1)) 2))
)
